--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div><br>
 			<div class="row center">
 				<div class="col s12 m4">
-				   <a href="blog.html" id="download-button" class="btn waves-effect waves-light brown">POSTS</a>
+				   <a href="homeblog.html" id="download-button" class="btn waves-effect waves-light brown">POSTS</a>
 				</div>
 				<div class="col s12 m4">
 					<a href="http://materializecss.com/getting-started.html" id="download-button" class="btn waves-effect waves-light brown">PORTFÓLIO</a>
